@@ -1,17 +1,7 @@
 {
-  "count": 5,
-  "uniques": 5,
+  "count": 3,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-09-14T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
-      "timestamp": "2024-09-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-09-16T00:00:00Z",
       "count": 1,
